force-app/main/default/objects/Opportunity__c/Opportunity__c.object-meta.xml
<CustomObject>
    <label>My Opportunity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>