force-app/main/default/objects/Opportunity__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>