force-app/main/default/objects/Opportunity__c/fields/Opportunity_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Name__c</fullName>
    <label>Opportunity Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>