force-app/main/default/objects/Opportunity__c/fields/Prod_Prod_Code__c.field-meta.xml
<CustomField>
    <fullName>Prod_Prod_Code__c</fullName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>