force-app/main/default/objects/Opportunity__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication Devices</fullName>
                <label>Cable Ties</label>
            </value>
            <value>
                <fullName>Colourless to yellowish clear liquid.</fullName>
                <label>Wire Harness</label>
            </value>
            <value>
                <fullName>Tie Mounts</fullName>
            </value>
            <value>
                <fullName>Polymide</fullName>
            </value>
            <value>
                <fullName>Wire Managment</fullName>
            </value>
            <value>
                <fullName>circut Bord Accessories</fullName>
            </value>
            <value>
                <fullName>Security Seals</fullName>
            </value>
            <value>
                <fullName>Cable Protection</fullName>
            </value>
            <value>
                <fullName>Cord Organix</fullName>
            </value>
            <value>
                <fullName>Flexiform Continous Grommet Strip</fullName>
            </value>
            <value>
                <fullName>Connector Backshells</fullName>
            </value>
            <value>
                <fullName>Electrical Equipment.</fullName>
                <isActive>false</isActive>
                <label>Electrical Equipment.</label>
            </value>
            <value>
                <fullName>Electrical Fixture</fullName>
                <isActive>false</isActive>
                <label>Electrical Fixture</label>
            </value>
            <value>
                <fullName>Fire Alarm Devices</fullName>
                <isActive>false</isActive>
                <label>Fire Alarm Devices</label>
            </value>
            <value>
                <fullName>Lighting Devices</fullName>
                <isActive>false</isActive>
                <label>Lighting Devices</label>
            </value>
            <value>
                <fullName>Lighting Fixture</fullName>
                <isActive>false</isActive>
                <label>Lighting Fixture</label>
            </value>
            <value>
                <fullName>Nurse Call Devices</fullName>
                <isActive>false</isActive>
                <label>Nurse Call Devices</label>
            </value>
            <value>
                <fullName>Telephone Devices</fullName>
                <isActive>false</isActive>
                <label>Telephone Devices</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>