force-app/main/default/objects/Opportunity__c/fields/Product_IS_Active__c.field-meta.xml
<CustomField>
    <fullName>Product_IS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>