force-app/main/default/objects/Opportunity__c/fields/Quantity_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit_Of_Measure__c</fullName>
    <label>Quantity Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&apos;&apos;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>