force-app/main/default/objects/Opportunity__c/fields/SourceProductId__c.field-meta.xml
<CustomField>
    <fullName>SourceProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Product</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunities (Source Product)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>