force-app/main/default/objects/Opportunity__c/validationRules/validate_Account_on_opp_record_type.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Account_on_opp_record_type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     RecordType.Name  = &apos;Opportunity&apos;,
    ISBLANK(Account_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Account_Name__c</errorDisplayField>
    <errorMessage>Enter Account Name</errorMessage>
</ValidationRule>