force-app/main/default/objects/Opportunity__c/validationRules/validate_close_date_when_rcdtype_opp.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_close_date_when_rcdtype_opp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &apos;Opportunity&apos;,
    ISBLANK(Close_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Enter Close Date</errorMessage>
</ValidationRule>