force-app/main/default/objects/Opportunity__c/validationRules/validate_primary_contact_when_RT_is_Op.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_primary_contact_when_RT_is_Op</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &apos;Opportunity&apos;,
    ISBLANK( Primary_contact__c )
)</errorConditionFormula>
    <errorDisplayField>Primary_contact__c</errorDisplayField>
    <errorMessage>Enter Primary  Contact</errorMessage>
</ValidationRule>