force-app/main/default/objects/Opportunity__c/listViews/Active_Product.listView-meta.xml
<ListView>
    <fullName>Active_Product</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Product_IS_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity__c.Product</value>
    </filters>
    <label>Active Product</label>
</ListView>