force-app/main/default/objects/Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Primary_contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>