force-app/main/default/objects/Opportunity__c/listViews/Inactive_Products.listView-meta.xml
<ListView>
    <fullName>Inactive_Products</fullName>
    <columns>NAME</columns>
    <columns>Prod_Prod_Code__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity__c.Product</value>
    </filters>
    <filters>
        <field>Product_IS_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Products</label>
</ListView>