force-app/main/default/objects/Opportunity__c/listViews/My_Opporunity.listView-meta.xml
<ListView>
    <fullName>My_Opporunity</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity__c.Opportunity</value>
    </filters>
    <label>My Opporunity</label>
</ListView>